--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -5,7 +5,8 @@ on:
 
 jobs:
   build:
-    runs-on: macos-14 
+    # UPGRADED: Moved to macos-15 to gain access to Swift 6.1+
+    runs-on: macos-15 
 
     steps:
       - name: Checkout Cork Repository
@@ -13,14 +14,13 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      # FIX 1: Updated from 16.0 to 16.2 to match current GitHub runner availability
-      - name: Select Xcode 16.2
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      # UPGRADED: Pointing to Xcode 16.4 which contains Swift 6.1
+      - name: Select Xcode 16.4
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
 
-      # FIX 2: Added the GITHUB_TOKEN environment variable to bypass the 403 rate limit
       - name: Install Tuist via Mise and Generate Project
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
