--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      - name: Select Xcode 26.2
-        run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
+      - name: Select Xcode 16.2
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
@@ -28,9 +28,9 @@ jobs:
           mise exec tuist@4.50.2 -- tuist install
           mise exec tuist@4.50.2 -- tuist generate --no-binary-cache
 
-      # FIX 3: Added flags to bypass the Xcode plugin and macro security prompts
       - name: Build App
         run: |
+          # FIX 4: Added SWIFT_ENABLE_EXPLICIT_MODULES=NO to prevent the new dependency scanner from crashing the build graph
           xcodebuild clean build \
             -workspace Cork.xcworkspace \
             -scheme "Self-Compiled" \
@@ -40,6 +40,7 @@ jobs:
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
+            SWIFT_ENABLE_EXPLICIT_MODULES=NO \
             -derivedDataPath build_output
 
       - name: Zip the App Bundle
