--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      - name: Select Xcode 16.2
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      # RESTORED FIX: Pointing to Xcode 26.2 to ensure Swift 6.2+ is used
+      - name: Select Xcode 26.2
+        run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
@@ -30,7 +31,6 @@ jobs:
 
       - name: Build App
         run: |
-          # FIX 4: Added SWIFT_ENABLE_EXPLICIT_MODULES=NO to prevent the new dependency scanner from crashing the build graph
           xcodebuild clean build \
             -workspace Cork.xcworkspace \
             -scheme "Self-Compiled" \
