--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -28,14 +28,13 @@ jobs:
           mise exec tuist@4.50.2 -- tuist install
           mise exec tuist@4.50.2 -- tuist generate --no-binary-cache
 
-      # FINAL FIX: Swapped to Ad-Hoc signing (-) so the Asset Catalog compiler doesn't crash on Apple Silicon
+      # THE FIX: Stripped out the forced Release configuration and generic destination 
+      # so Xcode stops fighting Tuist's internal project mapping.
       - name: Build App
         run: |
           xcodebuild clean build \
             -workspace Cork.xcworkspace \
             -scheme "Self-Compiled" \
-            -configuration Release \
-            -destination "generic/platform=macOS" \
             -skipPackagePluginValidation \
             -skipMacroValidation \
             SWIFT_ENABLE_EXPLICIT_MODULES=NO \
@@ -43,13 +42,14 @@ jobs:
             CODE_SIGN_STYLE="Manual" \
             -derivedDataPath build_output
 
+      # UPDATED: Path changed from Release to Debug to match the default build action
       - name: Zip the App Bundle
         run: |
-          cd build_output/Build/Products/Release
+          cd build_output/Build/Products/Debug
           zip -r Cork.zip Cork.app
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Cork-App
-          path: build_output/Build/Products/Release/Cork.zip
+          path: build_output/Build/Products/Debug/Cork.zip
