--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      - name: Select Xcode 16.2
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      # We absolutely need Xcode 26.2 to get Swift 6.2+
+      - name: Select Xcode 26.2
+        run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
@@ -28,11 +29,15 @@ jobs:
           mise exec tuist@4.50.2 -- tuist install
           mise exec tuist@4.50.2 -- tuist generate --no-binary-cache
 
+      # Using Archive to safely compile assets, with all necessary CI bypass flags
       - name: Archive App
         run: |
           xcodebuild clean archive \
             -workspace Cork.xcworkspace \
             -scheme "Self-Compiled" \
+            -skipPackagePluginValidation \
+            -skipMacroValidation \
+            SWIFT_ENABLE_EXPLICIT_MODULES=NO \
             CODE_SIGN_IDENTITY="-" \
             CODE_SIGN_STYLE="Manual" \
             -archivePath Cork.xcarchive
