--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      - name: Select Xcode 16.2
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+      # THE FIX: Pointing to Xcode 16.4, which officially contains Swift 6.1
+      - name: Select Xcode 16.4
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
