--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -13,9 +13,9 @@ jobs:
         with:
           repository: buresdv/Cork
 
-      # THE FIX: Pointing to Xcode 16.4, which officially contains Swift 6.1
-      - name: Select Xcode 16.4
-        run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
+      # Restored to the factual reality of 2026: Xcode 26.2 contains the required Swift 6.2.0 compiler
+      - name: Select Xcode 26.2
+        run: sudo xcode-select -s /Applications/Xcode_26.2.app/Contents/Developer
 
       - name: Install Mise
         run: curl https://mise.run | sh
@@ -29,8 +29,10 @@ jobs:
           mise exec tuist@4.50.2 -- tuist install
           mise exec tuist@4.50.2 -- tuist generate --no-binary-cache
 
+      # Using xcbeautify to expose the actual Swift compilation errors instead of a generic Exit Code 65
       - name: Build App
         run: |
+          set -o pipefail
           xcodebuild clean build \
             -workspace Cork.xcworkspace \
             -scheme "Self-Compiled" \
@@ -38,17 +40,22 @@ jobs:
             -skipMacroValidation \
             CODE_SIGN_IDENTITY="-" \
             CODE_SIGN_STYLE="Manual" \
-            DEVELOPMENT_TEAM="" \
-            -derivedDataPath build_output
+            -derivedDataPath build_output | xcbeautify
 
       - name: Zip the App Bundle
         run: |
-          APP_PATH=$(find build_output/Build/Products -name "Cork.app" -type d)
-          cd "$(dirname "$APP_PATH")"
-          zip -r Cork.zip Cork.app
+          APP_PATH=$(find build_output/Build/Products -name "Cork.app" -type d | head -n 1)
+          if [ -d "$APP_PATH" ]; then
+            cd "$(dirname "$APP_PATH")"
+            zip -r Cork.zip Cork.app
+          else
+            echo "App bundle not found. The build likely failed."
+            exit 1
+          fi
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: Cork-App
           path: build_output/Build/Products/**/*.zip
