--- a/.github/workflows/cork.yml
+++ b/.github/workflows/cork.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Install Mise
         run: curl https://mise.run | sh
 
-      # THE FIX PART 1: Hollow out the asset folders. Tuist sees the folders and passes validation, 
-      # but actool has zero actual image files to crash on.
-      - name: Hollow Out Crash Hazards
+      # THE FIX: Delete ONLY the AppIcon so the headless compiler doesn't crash. 
+      # We intentionally do not touch the Preview Content folder so Xcode validation passes.
+      - name: Remove Headless CI Crash Hazard
         run: |
-          find "Cork/AppIcon.icon" -type f -delete
-          find "Cork/Preview Content" -type f -delete
+          rm -rf "Cork/AppIcon.icon"
+          rm -rf "Cork/AppIcon.icns"
 
       - name: Install Tuist via Mise and Generate Project
         env:
@@ -35,8 +35,7 @@ jobs:
           mise exec tuist@4.50.2 -- tuist install
           mise exec tuist@4.50.2 -- tuist generate --no-binary-cache
 
-      # THE FIX PART 2: Explicitly tell Xcode to ignore the AppIcon and Previews, 
-      # alongside our concurrency and explicit module bypasses.
+      # Retaining the Swift 6 concurrency and explicit module bypasses
       - name: Build App
         run: |
           xcodebuild clean build \
@@ -47,8 +46,6 @@ jobs:
             SWIFT_STRICT_CONCURRENCY=minimal \
             SWIFT_TREAT_WARNINGS_AS_ERRORS=NO \
             SWIFT_ENABLE_EXPLICIT_MODULES=NO \
-            ENABLE_PREVIEWS=NO \
-            ASSETCATALOG_COMPILER_APPICON_NAME="" \
             CODE_SIGN_IDENTITY="-" \
             CODE_SIGN_STYLE="Manual" \
             -derivedDataPath build_output
